objects/Org_Template__c.object
<CustomObject>
    <fields>
        <fullName>Radius_Side__c</fullName>
        <defaultValue>&quot;0px&quot;</defaultValue>
        <label>Radius Side</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Radius_Tab__c</fullName>
        <defaultValue>&quot;5px&quot;</defaultValue>
        <label>Radius Tab</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Shadow_Body__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Shadow Body</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Shadow_Header__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Shadow Header</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Shadow_Page_Block__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Shadow Page Block</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Shadow_Side_Module__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Shadow Side Module</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Shadow_Side__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Shadow Side</label>
        <type>Checkbox</type>
    </fields>
    <label>Demo Template</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Logo__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <label>Template Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Demo Templates</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>